tests/compile_error/redeclare_var.xprshn
// Compile error: redeclaration of variable
int a!
int a! // Redeclaration 